--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Calculator & Planner</title>
-    <link rel="stylesheet" href="../style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <style>
         .calculator-container {
             max-width: 600px; /* Wider for more content */
@@ -188,6 +188,6 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="../../scripts/budgetcalc-script.js"></script>
+    <script src="../scripts/budgetcalc-script.js"></script>
 </body>
 </html>
