--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -143,6 +143,6 @@
         </div>
         <a href="index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    <script src="amortizationcalc-script.js"></script>
+    <script src="../script/amortizationcalc-script.js"></script>
 </body>
 </html>
