--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -143,6 +143,9 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
+    <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     <script src="../scripts/amortizationcalc-script.js"></script>
 </body>
 </html>
