--- a/html/annuityfvcalc.html
+++ b/html/annuityfvcalc.html
@@ -93,6 +93,9 @@
             <p id="futureValue" class="value">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+         <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/annuityfvcalc-script.js"></script>
 </body>
