--- a/html/budgetcalc.html
+++ b/html/budgetcalc.html
@@ -187,6 +187,9 @@
             <p id="netBalance" class="value positive">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+     <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/budgetcalc-script.js"></script>
 </body>
