--- a/html/compoundinterestcalc.html
+++ b/html/compoundinterestcalc.html
@@ -73,6 +73,9 @@
             <p id="endingBalance" class="value highlight-balance">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+    <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/compoundinterestcalc-script.js"></script>
 </body>
