--- a/html/emergencyfundcalc.html
+++ b/html/emergencyfundcalc.html
@@ -161,6 +161,9 @@
             <p id="recommendedEmergencyFund" class="value">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+     <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/emergencyfundcalc-script.js"></script>
 </body>
