--- a/html/inflationcalc.html
+++ b/html/inflationcalc.html
@@ -62,6 +62,9 @@
             <p id="purchasingPower" class="value highlight-power">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+    <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/inflationcalc-script.js"></script>
 </body>
