--- a/html/mortgagecalc.html
+++ b/html/mortgagecalc.html
@@ -53,6 +53,9 @@
             <p id="totalCost">$0.00</p>
         </div>
           <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+     <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/script.js"></script>
 </body>
