--- a/html/networthcalc.html
+++ b/html/networthcalc.html
@@ -194,6 +194,9 @@
             <p id="netWorth" class="value positive">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+     <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/networthcalc-script.js"></script>
 </body>
