--- a/html/taxcalc.html
+++ b/html/taxcalc.html
@@ -77,6 +77,9 @@
             <p id="afterTaxIncome" class="value after-tax-income">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
+     <div class="footer-copyright">
+        &copy; 2025 Aryal & Logistics LLC. All rights reserved.
+    </div>
     </div>
     <script src="../scripts/taxcalc-script.js"></script>
 </body>
