--- a/html/amortizationcalc.html
+++ b/html/amortizationcalc.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amortization Schedule Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css"> 
+    
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <style>
+        /* General Body Styles for sticky footer layout */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px; /* Add padding around the whole page */
+            background-color: #f4f7f6;
+            color: #333;
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack children vertically */
+            justify-content: space-between; /* Push content to top, footer to bottom */
+            align-items: center; /* Center content horizontally */
+            min-height: 100vh; /* Ensure body takes full viewport height */
+            box-sizing: border-box; /* Include padding in height calculation */
+        }
+
         .calculator-container {
             max-width: 900px; /* Wider to accommodate the table */
             padding: 30px;
+            background-color: #ffffff; /* Add background for clarity */
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 20px; /* Add margin below calculator before footer */
+            width: 100%; /* Allow container to take up max-width */
+            box-sizing: border-box; /* Include padding in width */
         }
 
         .results {
@@ -20,11 +44,20 @@
             flex-wrap: wrap; /* Allow wrapping on smaller screens */
             margin-bottom: 20px;
             gap: 20px; /* Space between flex items */
+            padding: 20px 0;
+            border-top: 1px solid #eee;
+            border-bottom: 1px solid #eee;
         }
 
         .summary-info {
             text-align: left;
             min-width: 250px; /* Ensure space for summary text */
+            flex-shrink: 0; /* Prevent shrinking */
+        }
+
+        .results h2 {
+            margin-top: 0; /* Remove default h2 margin */
+            color: #333;
         }
 
         .results p.label {
@@ -52,6 +85,12 @@
             max-width: 300px; /* Max width for the chart */
             height: 300px; /* Max height for the chart to make it square */
             position: relative; /* Needed for Chart.js responsiveness */
+            /* Add some visual border/shadow for the chart container */
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 10px;
+            background-color: #fcfcfc;
+            box-sizing: border-box; /* Include padding in width/height */
         }
 
 
@@ -65,6 +104,7 @@
             background-color: #f8f8f8;
             max-height: 500px; /* Limit height and add scroll */
             overflow-y: auto;
+            box-sizing: border-box; /* Include padding in width/height */
         }
 
         #amortizationTable {
@@ -105,6 +145,97 @@
             font-weight: bold;
             background-color: #e9ecef !important; /* Ensure it stands out */
         }
+
+        /* Input group styling */
+        .input-group {
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .input-group label {
+            flex: 1;
+            text-align: right;
+            padding-right: 10px;
+            font-size: 0.95em;
+            color: #555;
+        }
+
+        .input-group input[type="number"] {
+            flex: 2;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 0.9em;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 12px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-bottom: 20px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .back-link {
+            display: block;
+            margin-top: 30px;
+            text-align: center;
+            color: #007bff;
+            text-decoration: none;
+            font-size: 0.95em;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Footer specific styles */
+        .footer-copyright {
+            width: 100%; /* Take full width */
+            text-align: center;
+            padding: 20px 0;
+            margin-top: auto; /* Pushes the footer to the bottom in a flex container */
+            font-size: 0.85em;
+            color: #777;
+            background-color: #e9ecef; /* Slightly different background for visual separation */
+            border-top: 1px solid #ddd;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .results {
+                flex-direction: column;
+                align-items: center;
+            }
+            .summary-info, .chart-container {
+                min-width: unset;
+                width: 100%;
+                max-width: 300px; /* Constrain chart on smaller screens */
+            }
+            .input-group {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .input-group label {
+                text-align: left;
+                padding-right: 0;
+            }
+            .input-group input {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
@@ -132,7 +263,7 @@
                 <h2>Loan Summary:</h2>
                 <p class="label">Estimated Monthly Payment:</p>
                 <p id="monthlyPayment" class="value monthly-payment">$0.00</p>
-                </div>
+            </div>
             <div class="chart-container">
                 <canvas id="amortizationChart"></canvas>
             </div>
@@ -143,9 +274,11 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
+    
     <div class="footer-copyright">
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
+
     <script src="../scripts/amortizationcalc-script.js"></script>
 </body>
 </html>
