--- a/html/emergencyfundcalc.html
+++ b/html/emergencyfundcalc.html
@@ -4,10 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Fund Calculator</title>
-    <link rel="stylesheet" href="style.css"> <style>
+    <link rel="stylesheet" href="../css/style.css"> 
+    <style>
+        /* General Body Styles for sticky footer layout */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px; /* Add padding around the whole page */
+            background-color: #f4f7f6;
+            color: #333;
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack children vertically */
+            justify-content: space-between; /* Push content to top, footer to bottom */
+            align-items: center; /* Center content horizontally */
+            min-height: 100vh; /* Ensure body takes full viewport height */
+            box-sizing: border-box; /* Include padding in height calculation */
+        }
+
         .calculator-container {
             max-width: 600px;
             padding: 30px;
+            background-color: #ffffff; /* Added background for clarity */
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 20px; /* Add margin below calculator before footer */
+            width: 100%; /* Allow container to take up max-width */
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        .input-group {
+            margin-bottom: 15px;
+            display: flex;
+            flex-direction: column; /* Stack label, input, hint vertically */
+            align-items: flex-start; /* Align contents to the left */
+            gap: 5px; /* Space between elements in the group */
+        }
+
+        .input-group label {
+            font-weight: 600;
+            color: #333;
+            width: 100%; /* Full width for label */
+        }
+
+        .input-group input[type="number"],
+        .input-group select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        .input-group .hint {
+            font-size: 0.85em;
+            color: #777;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 12px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
         }
 
         .section-title {
@@ -24,6 +97,7 @@
             align-items: center;
             gap: 10px;
             margin-bottom: 15px;
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
         }
 
         .expense-item label {
@@ -32,6 +106,8 @@
             font-size: 0.95em;
             color: #555;
             padding-right: 10px;
+            min-width: 100px; /* Ensure labels don't get too small */
+            box-sizing: border-box;
         }
 
         .expense-item input[type="text"] {
@@ -40,6 +116,8 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             font-size: 0.9em;
+            min-width: 120px; /* Ensure input doesn't get too small */
+            box-sizing: border-box;
         }
 
         .expense-item input[type="number"] {
@@ -49,6 +127,8 @@
             border-radius: 4px;
             font-size: 0.9em;
             text-align: right;
+            min-width: 80px; /* Ensure number input doesn't get too small */
+            box-sizing: border-box;
         }
 
         .remove-btn {
@@ -87,6 +167,12 @@
             margin-top: 30px;
             padding-top: 20px;
             border-top: 2px solid #eee;
+            text-align: center; /* Center the results text */
+        }
+
+        .results h2 {
+            margin-top: 0; /* Remove default h2 margin */
+            color: #333;
         }
 
         .results p.label {
@@ -103,6 +189,66 @@
         }
         .results #recommendedEmergencyFund {
             color: #28a745; /* Green for recommended amount */
+        }
+
+        .back-link {
+            display: block;
+            margin-top: 30px;
+            text-align: center;
+            color: #007bff;
+            text-decoration: none;
+            font-size: 0.95em;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Footer specific styles */
+        .footer-copyright {
+            width: 100%; /* Take full width */
+            text-align: center;
+            padding: 20px 0;
+            margin-top: auto; /* Pushes the footer to the bottom in a flex container */
+            font-size: 0.85em;
+            color: #777;
+            background-color: #e9ecef; /* Slightly different background for visual separation */
+            border-top: 1px solid #ddd;
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 600px) {
+            .calculator-container {
+                padding: 20px;
+            }
+            .input-group {
+                flex-direction: column; /* Stack inputs vertically */
+                align-items: flex-start;
+            }
+            .input-group label,
+            .input-group input,
+            .input-group select {
+                width: 100%; /* Ensure inputs take full width */
+            }
+            .expense-item {
+                flex-direction: column; /* Stack expense items vertically */
+                align-items: flex-start;
+                gap: 5px; /* Reduce gap when stacked */
+            }
+            .expense-item label {
+                text-align: left; /* Align labels left when stacked */
+                width: 100%;
+                padding-right: 0;
+            }
+            .expense-item input {
+                width: 100%; /* Full width for inputs when stacked */
+                min-width: unset; /* Remove min-width override */
+            }
+            .remove-btn {
+                width: 100%; /* Full width for remove button */
+                margin-top: 5px; /* Add some spacing */
+            }
         }
     </style>
 </head>
@@ -162,9 +308,11 @@
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-     <div class="footer-copyright">
+    
+    <div class="footer-copyright">
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
+
     <script src="../scripts/emergencyfundcalc-script.js"></script>
 </body>
 </html>
