--- a/html/networthcalc.html
+++ b/html/networthcalc.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Net Worth Calculator</title>
-    <link rel="stylesheet" href="style.css"> <style>
-        /* General container and section styles reused from budgetcalc.html */
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+        /* General Body Styles for sticky footer layout */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px; /* Add padding around the whole page */
+            background-color: #f4f7f6;
+            color: #333;
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack children vertically */
+            justify-content: space-between; /* Push content to top, footer to bottom */
+            align-items: center; /* Center content horizontally */
+            min-height: 100vh; /* Ensure body takes full viewport height */
+            box-sizing: border-box; /* Include padding in height calculation */
+        }
+
         .calculator-container {
             max-width: 600px; /* Wider for more content */
             padding: 30px;
+            background-color: #ffffff; /* Added background for clarity */
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 20px; /* Add margin below calculator before footer */
+            width: 100%; /* Allow container to take up max-width */
+            box-sizing: border-box; /* Include padding in width */
         }
 
         .section-title {
@@ -25,6 +47,7 @@
             align-items: center;
             gap: 10px; /* Space between elements in a row */
             margin-bottom: 15px; /* Space between rows */
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
         }
 
         .asset-item label, .liability-item label {
@@ -33,6 +56,8 @@
             font-size: 0.95em;
             color: #555;
             padding-right: 10px;
+            min-width: 120px; /* Ensure labels don't get too small */
+            box-sizing: border-box;
         }
 
         .asset-item input[type="text"],
@@ -42,6 +67,8 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             font-size: 0.9em;
+            min-width: 150px; /* Ensure input doesn't get too small */
+            box-sizing: border-box;
         }
 
         .asset-item input[type="number"],
@@ -52,6 +79,8 @@
             border-radius: 4px;
             font-size: 0.9em;
             text-align: right; /* Numbers align right */
+            min-width: 100px; /* Ensure number input doesn't get too small */
+            box-sizing: border-box;
         }
 
         /* Reusing common button styles */
@@ -91,6 +120,12 @@
             margin-top: 30px;
             padding-top: 20px;
             border-top: 2px solid #eee;
+            text-align: center; /* Center the results text */
+        }
+
+        .results h2 {
+            margin-top: 0; /* Remove default h2 margin */
+            color: #333;
         }
 
         .results p.label {
@@ -110,6 +145,57 @@
         }
         .results #netWorth.negative {
             color: #dc3545; /* Red for negative net worth */
+        }
+
+        .back-link {
+            display: block;
+            margin-top: 30px;
+            text-align: center;
+            color: #007bff;
+            text-decoration: none;
+            font-size: 0.95em;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Footer specific styles */
+        .footer-copyright {
+            width: 100%; /* Take full width */
+            text-align: center;
+            padding: 20px 0;
+            margin-top: auto; /* Pushes the footer to the bottom in a flex container */
+            font-size: 0.85em;
+            color: #777;
+            background-color: #e9ecef; /* Slightly different background for visual separation */
+            border-top: 1px solid #ddd;
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 600px) {
+            .calculator-container {
+                padding: 20px;
+            }
+            .asset-item, .liability-item {
+                flex-direction: column; /* Stack items vertically */
+                align-items: flex-start;
+                gap: 5px; /* Reduce gap when stacked */
+            }
+            .asset-item label, .liability-item label {
+                text-align: left; /* Align labels left when stacked */
+                width: 100%;
+                padding-right: 0;
+            }
+            .asset-item input, .liability-item input {
+                width: 100%; /* Full width for inputs when stacked */
+                min-width: unset; /* Remove min-width override */
+            }
+            .remove-btn {
+                width: 100%; /* Full width for remove button */
+                margin-top: 5px; /* Add some spacing */
+            }
         }
     </style>
 </head>
@@ -194,10 +280,12 @@
             <p id="netWorth" class="value positive">$0.00</p>
         </div>
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
-       </div>
+    </div>
+    
     <div class="footer-copyright">
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
+
     <script src="../scripts/networthcalc-script.js"></script>
 </body>
 </html>
