--- a/html/ruleof72calc.html
+++ b/html/ruleof72calc.html
@@ -4,10 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rule of 72 Calculator</title>
-    <link rel="stylesheet" href="style.css"> <style>
-        .calculator-container {
-            max-width: 480px;
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+        /* General Body Styles for sticky footer layout */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px; /* Add padding around the whole page */
+            background-color: #f4f7f6;
+            color: #333;
+            display: flex; /* Enable flexbox */
+            flex-direction: column; /* Stack children vertically */
+            justify-content: space-between; /* Push content to top, footer to bottom */
+            align-items: center; /* Center content horizontally */
+            min-height: 100vh; /* Ensure body takes full viewport height */
+            box-sizing: border-box; /* Include padding in height calculation */
         }
+
+        .calculator-container {
+            max-width: 480px; /* Consistent width with other calculators */
+            padding: 30px;
+            background-color: #ffffff; /* Added background for clarity */
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            margin-bottom: 20px; /* Add margin below calculator before footer */
+            width: 100%; /* Allow container to take up max-width */
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        .input-group {
+            margin-bottom: 20px; /* More space between input groups */
+            border: 1px solid #eee;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #fcfcfc;
+            display: flex;
+            flex-direction: column; /* Stack label, input, hint vertically */
+            align-items: flex-start; /* Align contents to the left */
+            gap: 5px; /* Space between elements in the group */
+        }
+
+        .input-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 600;
+            color: #333;
+            width: 100%; /* Full width for label */
+        }
+
+        .input-group input[type="number"] {
+            width: 100%; /* Changed from calc(100% - 20px) for simplicity with box-sizing */
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+            box-sizing: border-box; /* Include padding in width */
+        }
+
+        .input-group input[type="number"]:focus {
+            border-color: #007bff;
+            outline: none;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+        }
+
+        .explanation {
+            font-size: 0.9em;
+            color: #666;
+            margin-top: -10px;
+            margin-bottom: 25px;
+        }
+
+        .results {
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 2px solid #eee;
+            text-align: center; /* Center the results text */
+        }
+
         .results p.label {
             font-size: 1.1em;
             color: #555;
@@ -23,37 +97,41 @@
         .results .highlight-result {
             color: #007bff; /* Blue for results */
         }
-        .input-group {
-            margin-bottom: 20px; /* More space between input groups */
-            border: 1px solid #eee;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: #fcfcfc;
-        }
-        .input-group label {
+
+        .back-link {
             display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-            color: #333;
+            margin-top: 30px;
+            text-align: center;
+            color: #007bff;
+            text-decoration: none;
+            font-size: 0.95em;
         }
-        .input-group input[type="number"] {
-            width: calc(100% - 20px); /* Adjust width for padding */
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1em;
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Footer specific styles */
+        .footer-copyright {
+            width: 100%; /* Take full width */
+            text-align: center;
+            padding: 20px 0;
+            margin-top: auto; /* Pushes the footer to the bottom in a flex container */
+            font-size: 0.85em;
+            color: #777;
+            background-color: #e9ecef; /* Slightly different background for visual separation */
+            border-top: 1px solid #ddd;
             box-sizing: border-box; /* Include padding in width */
         }
-        .input-group input[type="number"]:focus {
-            border-color: #007bff;
-            outline: none;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
-        }
-        .explanation {
-            font-size: 0.9em;
-            color: #666;
-            margin-top: -10px;
-            margin-bottom: 25px;
+
+        /* Responsive adjustments */
+        @media (max-width: 600px) {
+            .calculator-container {
+                padding: 20px;
+            }
+            .input-group {
+                padding: 10px; /* Reduce padding for smaller screens */
+            }
         }
     </style>
 </head>
@@ -79,9 +157,11 @@
 
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
- <div class="footer-copyright">
+
+    <div class="footer-copyright">
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
+
     <script src="../scripts/ruleof72calc-script.js"></script>
 </body>
 </html>
