--- a/html/annuityfvcalc.html
+++ b/html/annuityfvcalc.html
@@ -4,47 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Value of Annuity Calculator</title>
-    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* General Body Styles for sticky footer layout */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px; /* Add padding around the whole page */
+            padding: 20px;
             background-color: #f4f7f6;
             color: #333;
-            display: flex; /* Enable flexbox */
-            flex-direction: column; /* Stack children vertically */
-            justify-content: space-between; /* Push content to top, footer to bottom */
-            align-items: center; /* Center content horizontally */
-            min-height: 100vh; /* Ensure body takes full viewport height */
-            box-sizing: border-box; /* Include padding in height calculation */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            min-height: 100vh;
+            box-sizing: border-box;
         }
 
         .calculator-container {
             max-width: 550px;
             padding: 30px;
-            background-color: #ffffff; /* Added background for clarity */
+            background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            margin-bottom: 20px; /* Add margin below calculator before footer */
-            width: 100%; /* Allow container to take up max-width */
-            box-sizing: border-box; /* Include padding in width */
+            margin-bottom: 20px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .input-group {
             margin-bottom: 15px;
             display: flex;
-            flex-direction: column; /* Stack label, input, hint vertically */
-            align-items: flex-start; /* Align contents to the left */
-            gap: 5px; /* Space between elements in the group */
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 5px;
         }
 
         .input-group label {
             font-weight: 600;
             color: #333;
-            width: 100%; /* Full width for label */
+            width: 100%;
         }
 
         .input-group input[type="number"],
@@ -54,7 +55,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 1em;
-            box-sizing: border-box; /* Include padding in width */
+            box-sizing: border-box;
         }
 
         .input-group .hint {
@@ -87,11 +88,11 @@
             margin-top: 30px;
             padding-top: 20px;
             border-top: 2px solid #eee;
-            text-align: center; /* Center the results text */
+            text-align: center;
         }
 
         .results h2 {
-            margin-top: 0; /* Remove default h2 margin */
+            margin-top: 0;
             color: #333;
         }
 
@@ -101,6 +102,7 @@
             margin-bottom: 5px;
             font-weight: normal;
         }
+
         .results p.value {
             font-size: 1.8em;
             color: #28a745; /* Green for future value */
@@ -108,25 +110,28 @@
             margin-top: 0;
             margin-bottom: 15px;
         }
+
         .radio-group {
             display: flex;
-            flex-wrap: wrap; /* Allow wrapping on smaller screens */
+            flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
             margin-top: 15px;
             margin-bottom: 25px;
-            padding: 15px; /* Increased padding for better appearance */
+            padding: 15px;
             border: 1px solid #ddd;
             border-radius: 8px;
             background-color: #f9f9f9;
         }
+
         .radio-group p {
             margin: 0;
             font-weight: 600;
             color: #333;
-            flex-basis: 100%; /* Make title take full width on its own line */
+            flex-basis: 100%;
             text-align: center;
         }
+
         .radio-group label {
             cursor: pointer;
             font-weight: normal;
@@ -135,6 +140,7 @@
             gap: 8px;
             color: #555;
         }
+
         .radio-group input[type="radio"] {
             transform: scale(1.2);
         }
@@ -154,15 +160,15 @@
 
         /* Footer specific styles */
         .footer-copyright {
-            width: 100%; /* Take full width */
+            width: 100%;
             text-align: center;
             padding: 20px 0;
-            margin-top: auto; /* Pushes the footer to the bottom in a flex container */
+            margin-top: auto;
             font-size: 0.85em;
             color: #777;
-            background-color: #e9ecef; /* Slightly different background for visual separation */
+            background-color: #e9ecef;
             border-top: 1px solid #ddd;
-            box-sizing: border-box; /* Include padding in width */
+            box-sizing: border-box;
         }
 
         /* Responsive adjustments */
@@ -171,13 +177,20 @@
                 padding: 20px;
             }
             .radio-group {
-                flex-direction: column; /* Stack radio options vertically */
+                flex-direction: column;
                 align-items: flex-start;
                 padding: 10px;
             }
             .radio-group p {
                 text-align: left;
             }
+        }
+
+        /* Chart Styles */
+        .chart-container {
+            width: 100%;
+            max-width: 400px; /* Adjust as needed */
+            margin: 20px auto; /* Center the chart */
         }
     </style>
 </head>
@@ -211,7 +224,7 @@
         </div>
 
         <div class="radio-group">
-            <p style="margin:0; font-weight: 600; color:#333;">Payment Timing:</p>
+            <p>Payment Timing:</p>
             <label>
                 <input type="radio" name="annuityType" value="ordinary" checked>
                 End of Period (Ordinary Annuity)
@@ -228,9 +241,14 @@
             <h2>Calculated Future Value:</h2>
             <p id="futureValue" class="value">$0.00</p>
         </div>
+
+        <div class="chart-container">
+            <canvas id="annuityChart"></canvas>
+        </div>
+
         <a href="../index.html" class="back-link">← Back to Main Calculators</a>
     </div>
-    
+
     <div class="footer-copyright">
         &copy; 2025 Aryal & Logistics LLC. All rights reserved.
     </div>
