--- a/html/ccpayoffcalc.html
+++ b/html/ccpayoffcalc.html
@@ -150,7 +150,7 @@
 
         .chart-wrapper canvas {
             max-width: 100%;
-            height: 250px; /* Fixed height for consistent chart size */
+            height: 200px; /* Adjusted height for more compact charts */
         }
 
         .chart-wrapper h3 {
